<resources>
    <string name="app_name">ShoeStore</string>
    <string name="login_to_your_account">Login to your Account</string>
    <string name="login">LogIn</string>
    <string name="create_new_account">Create New Account</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="welcome">Welcome</string>
    <string name="shoe_store">Shoe Store</string>
    <string name="instructions">Instructions</string>
    <string name="the_instructions">Step 1: Tap the Shoes Button to view Inventory\n\nStep 2: Tap the Floating Action Button to add a shoe to inventory.\n\nStep 3: Enter the information for the new shoe.\n\nStep 4: Tap the SAVE button to save to inventory.</string>
    <string name="add_shoe_button">Add Shoe Button</string>
    <string name="logout">Logout</string>
    <string name="enter_shoe_name">Enter Shoe Name</string>
    <string name="shoe_name_company">Shoe Company Name</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="company">Company:</string>
    <string name="shoe_name">Shoe Name:</string>
    <string name="size">Size:</string>
    <string name="description">Description:</string>
    <string name="name">Name</string>
    <string name="shoe_size">Shoe Size</string>
    <string name="shoe_description">Shoe Description</string>
    <string name="image_of_shoe">Image Of Shoe</string>
    <string name="shoes">Shoes</string>
    <string name="image_of_shoes">Image of Shoes</string>

</resources>
