<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <!--This layout is simple and only requires a LinearLayout-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            style="@style/title_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:text="@string/welcome" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:text="@string/shoe_store"
            android:textColor="@android:color/black"
            android:textSize="40sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/instructions_button"
            style="@style/button_style"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:text="@string/instructions" />

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="48dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/shoe"
            android:contentDescription="@string/image_of_shoes" />

    </LinearLayout>

</layout>