<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--Added Text to EditTextViews for Testing-->


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView5"
            style="@style/title_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_shoe_name"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText

            android:id="@+id/shoe_company_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:text="Nike"
            android:hint="@string/shoe_name_company"
            android:inputType="textCapWords"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_name_edit_text"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/cancel_button"
            style="@style/button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/save_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/save_button"
            style="@style/button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cancel_button" />

        <TextView
            android:id="@+id/company_text_view"
            style="@style/label_style_detail"
            android:text="@string/company"
            app:layout_constraintBottom_toBottomOf="@+id/shoe_company_edit_text"
            app:layout_constraintStart_toStartOf="@+id/shoe_name_text_view"
            app:layout_constraintTop_toTopOf="@+id/shoe_company_edit_text" />

        <TextView
            android:id="@+id/shoe_name_text_view"
            style="@style/label_style_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoe_name"
            app:layout_constraintBottom_toBottomOf="@+id/shoe_name_edit_text"
            app:layout_constraintEnd_toStartOf="@+id/shoe_name_edit_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/shoe_name_edit_text" />

        <TextView
            android:id="@+id/shoe_size_text_view"
            style="@style/label_style_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/size"
            app:layout_constraintBottom_toBottomOf="@+id/shoe_size_edit_text"
            app:layout_constraintStart_toStartOf="@+id/company_text_view"
            app:layout_constraintTop_toTopOf="@+id/shoe_size_edit_text" />

        <TextView
            android:id="@+id/shoe_description_text_view"
            style="@style/label_style_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            app:layout_constraintBottom_toBottomOf="@+id/description_edit_text"
            app:layout_constraintStart_toStartOf="@+id/shoe_size_text_view"
            app:layout_constraintTop_toTopOf="@+id/description_edit_text" />

        <EditText
            android:id="@+id/shoe_name_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:inputType="textCapWords"
            android:text="Air Jordan"
            android:hint="@string/shoe_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/shoe_size_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:text="11.5"
            android:hint="@string/shoe_size"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_company_edit_text"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/description_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:hint="@string/shoe_description"
            android:ems="10"
            android:text="Basketball Shoe"
            android:inputType="textCapSentences"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_size_edit_text"
            android:importantForAutofill="no" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>